# hydra-dl

./: Cargo.toml  README.md
.github/workflows/: ci.yml  pre-release.yml
examples/: callback_progress.rs  progressive_config.rs  range_download.rs  simple_download.rs
src/: cli.rs  config.rs  download.rs  lib.rs  main.rs  task.rs  worker.rs
src/cli/: logger.rs  progress.rs  runner.rs  utils.rs
src/config/: chunk.rs  concurrency.rs  health_check.rs  network.rs  progressive.rs  retry.rs  speed.rs
src/config/health_check/: anomaly_checker.rs
src/download/: download_stats.rs  progress_reporter.rs  progressive.rs  task.rs  task_allocator.rs  worker_health_checker.rs
src/download/task_allocator/: completion_tracker.rs  retry_scheduler.rs  task_queue.rs  worker_dispatcher.rs
src/download/worker_health_checker/: logic.rs
src/pool/: common.rs  download.rs  worker_mask.rs
src/pool/download/: executor.rs  local_health_checker.rs  stats_updater.rs
src/pool/download/executor/: file_writer.rs  retry_scheduler.rs  state.rs  state_machine.rs  task_allocator.rs
src/tools/: chunk_strategy.rs  fetch.rs  io_traits.rs  range_writer.rs
src/utils/: async_file.rs  cancel_channel.rs  chunk_strategy.rs  fetch.rs  io_traits.rs  range_writer.rs  ringbuf.rs  speed_calculator.rs  stats.rs  writer.rs
src/utils/fetch/: downloader.rs  metadata.rs  range.rs
src/utils/speed_calculator/: core.rs  tests.rs
src/utils/tests/: mod.rs
tests/: range_writer_integration_test.rs  worker_pool_tests.rs
