[package]
name = "hydra-dl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hydra-dl"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48.0", default-features = false}
reqwest = { version = "0.12.24", features = ["stream"] }
futures = "0.3"
thiserror = "2.0.17"
log = "0.4"
bytes = "1.10.1"
parking_lot = "0.12.5"
async-trait = "0.1.89"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18.2"
url = "2.5"
urlencoding = "2.1"
arc-swap = "1.7.1"
kestrel-timer = "0.1.1"
rustc-hash = "2.1.1"


[dev-dependencies]
tempfile = "3.23.0"
env_logger = "0.11.8"